RESOLVED FIXED251133
[Wasm-GC] Fix null checks for struct operations
https://bugs.webkit.org/show_bug.cgi?id=251133
Summary [Wasm-GC] Fix null checks for struct operations
Asumu Takikawa
Reported 2023-01-24 21:15:57 PST
There's a bug in the implementation of Wasm GC struct instructions such as `struct.get` and `struct.set`, in that they don't correctly implement null ref checks. Here's an example test case (can run in the JSTests/wasm/gc test directory): ``` import * as assert from "../assert.js"; import { compile, instantiate } from "./wast-wrapper.js"; let m = instantiate(` (module (type (struct (field i32))) (func (export "f") (result i32) (struct.get 0 0 (ref.null 0))) ) `); m.exports.f(); ``` This currently crashes, instead of raising a trap exception as needed.
Attachments
Asumu Takikawa
Comment 1 2023-01-24 21:34:47 PST
EWS
Comment 2 2023-01-26 12:12:01 PST
Committed 259449@main (a5a87681d68f): <https://commits.webkit.org/259449@main> Reviewed commits have been landed. Closing PR #9091 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-01-26 12:13:17 PST
Note You need to log in before you can comment on or make changes to this bug.